# dcs-world-schema

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  dcs_yaml_schema.yaml  pyproject.toml  tsconfig.json
.github/workflows/: cd.yml  ci.yml
dcs-world-schema/globals/: AI.singleton.yaml  Airbase.class.yaml  CoalitionObject.class.yaml  Controller.class.yaml  Disposition.singleton.yaml  Group.class.yaml  Object.class.yaml  SceneryObject.class.yaml  Spot.class.yaml  StaticObject.class.yaml  Unit.class.yaml  VoiceChat.singleton.yaml  Warehouse.class.yaml  Weapon.class.yaml  atmosphere.singleton.yaml  coalition.singleton.yaml  coord.singleton.yaml  dcs.singleton.yaml  env.singleton.yaml  land.singleton.yaml  missionCommands.singleton.yaml  net.singleton.yaml  timer.singleton.yaml  trigger.singleton.yaml  world.singleton.yaml
dcs-world-schema/types/: AI.types.yaml  Airbase.types.yaml  Attributes.enum.yaml  Beacon.types.yaml  Box3.record.yaml  Callsigns.JTAC.enum.yaml  Cargo.types.yaml  ColorRGBA.record.yaml  Event.types.yaml  GroupSpawnData.record.yaml  LatLon.record.yaml  MGRS.record.yaml  Position3.record.yaml  RefPoint.record.yaml  SceneryObject.types.yaml  StaticObject.types.yaml  TriggerZoneCircular.record.yaml  Unit.types.yaml  Vec2.record.yaml  Vec3.record.yaml  VoiceChat.types.yaml  Weapon.types.yaml  (+4 more)
reference_data/: dcs_world_api_dump_latest.json
tools/: dcs_api_extract.lua  export_golang.py  export_lua.py  export_python.py  export_selene_yaml.py  export_typescript.py  merge.py  validate.py  validate_types.py  verify.py
(+58 files in other folders)
